<resources>
    <!-- Aplicación -->
    <string name="app_name">Control De Presencia 2025 - BDISFER1410</string>

    <!-- Aplicación: Errores -->
    <string name="app_error_anyservice_connection">No se pudo contactar con el servidor</string>
    <string name="app_error_anyservice_response">La respuesta del servidor es inválida</string>
    <string name="app_error_anyservice_unknownkey">El servidor devolvió un error desconocido</string>
    <string name="app_error_anyservice_accesstokeninvalid">La sesión ha caducado</string>
    <string name="app_error_accesstoken_invalid">La sesión ha caducado</string>

    <!-- Activity: Fichajes: Views -->
    <string name="clock_title">Fichar</string>
    <string name="clock_mnu_history">Ver mis entradas y salidas</string>
    <string name="clock_mnu_settings">Configuración de usuario</string>
    <string name="clock_mnu_incidence">Crear incidencia</string>
    <string name="clock_mnu_logout">Cerrar sesión</string>
    <string name="clock_btn_clock_in">Entrar</string>
    <string name="clock_btn_clock_out">Salir</string>
    <string name="clock_btn_unknown">Error</string>

    <!-- Activity: Fichajes: Views: Feedback -->
    <string name="clock_fdb_error">¡Vaya un error!</string>
    <string name="clock_lbl_error">Esto es un error de la aplicación que no debería ser visto…</string>

    <string name="clock_fdb_wait">¡Espera, que todavía falta!</string>
    <string name="clock_lbl_wait">Aún no es hora de entrar a trabajar.</string>
    <string name="clock_fdb_start">¡Vamos, es hora de entrar!</string>
    <string name="clock_lbl_start">Ya inició tu jornada. Comiénzala tocándo al botón…</string>
    <string name="clock_fdb_work">Estás trabajando…</string>
    <string name="clock_lbl_work">De momento no puedes salir.\nEspera a que termine la jornada…</string>
    <string name="clock_fdb_exit">¡Ahora sí, ya puedes salir!</string>
    <string name="clock_lbl_exit">Por que ya se terminó la jornada hoy.\nAcábala tocándo al botón…</string>
    <string name="clock_fdb_recover">¡Bien hecho!</string>
    <string name="clock_lbl_recover">Ya terminastes la jornada de hoy.\nNo tienes nada más que hacer…</string>
    <string name="clock_fdb_notify_ausence">¡Oh no, has faltado!</string>
    <string name="clock_lbl_notify_ausence">Parece ser que hoy no fuistes al trabajo. ¿Es un error?\nSi es así, presenta una incidencia.</string>
    <string name="clock_fdb_tobein_work">No estás en la oficina…</string>
    <string name="clock_lbl_tobein_work">O eso es lo que dice el servicio de ubicación…</string>
    <string name="clock_fdb_freeday">¡Calma que es tu día libre!</string>
    <string name="clock_lbl_freeday">Si no es así presenta una incidencia.\nAunque no me chivaría la verdad…</string>
    <string name="clock_lbl_error_connection">No se pudo contactar con el servidor.\nReintenta la conexión deslizando para abajo…</string>

    <!-- Activity: Fichajes: Views: Horario -->
    <string name="clock_inf_wait">Espere</string>
    <string name="clock_inf_start">Entrada</string>
    <string name="clock_inf_work">Trabajo</string>
    <string name="clock_inf_exit">Salida</string>
    <string name="clock_inf_recover">Libre</string>
    <string name="clock_inf_unknowntime">…</string>

    <!-- Activity: Fichajes: Errores: Locales -->
    <string name="clock_error_location_couldntfetch">No se pudo conseguir tu ubicación.\nPuede que tengas desactivado el GPS.\nActivalo y luego desliza para abajo para recalibrar.</string>
    <string name="clock_error_location_denied">No tienes habilitados los permisos de ubicación</string>
    <string name="clock_error_location_preciserequired">Debes habilitar los permisos de ubicación precisa</string>
    <string name="clock_error_location_cannotclock">No podrás fichar por que no pudimos sacar tu ubicación</string>

    <!-- Activity: Fichajes: Errores: Tipo a realizar -->
    <string name="clock_error_actionservice_usernotfound">No se encontró al trabajador</string>
    <string name="clock_error_actionservice_horarionotfound">El trabajador no tiene un horario</string>

    <!-- Activity: Fichajes: Errores: Solicitud de entrada/salida -->
    <string name="clock_error_sendservice_usernotfound">No se encontró al trabajador</string>
    <string name="clock_error_sendservice_horarionotfound">El trabajador no tiene un horario</string>
    <string name="clock_error_sendservice_empresanotfound">El trabajador no tiene empresa</string>
    <string name="clock_error_sendservice_invalidlocation">Hubo un error al procesar tu ubicación</string>
    <string name="clock_error_sendservice_isnotinside">No estás dentro de la empresa</string>
    <string name="clock_error_sendservice_couldntclock">No se pudo realizar el fichaje</string>

    <!-- Activity: Inicio de sesión: Views -->
    <string name="login_title">Iniciar sesión</string>
    <string name="login_subtitle">Introduzca sus credenciales</string>
    <string name="login_lbl_username">Usuario</string>
    <string name="login_hnt_username">Escriba su usuario</string>
    <string name="login_lbl_password">Contraseña</string>
    <string name="login_hnt_password">Escriba su contraseña</string>
    <string name="login_lbl_server">Servidor</string>
    <string name="login_hnt_server">https://yourcompany.server</string>
    <string name="login_btn_login">Entrar</string>
    <string name="login_btn_remember">Recordar credenciales del usuario</string>

    <!-- Activity: Inicio de sesión: Errores: Locales -->
    <string name="login_error_input_username">Debes escribir un nombre de usuario</string>
    <string name="login_error_input_password">Debes escribir una contraseña</string>
    <string name="login_error_input_server">La dirección del servidor está mal escrita</string>
    <string name="login_error_input_credentials">Las credenciales no son válidas</string>
    <string name="login_error_load_credentials">No se pudieron cargar las credenciales</string>

    <!-- Activity: Inicio de sesión: Errores: Servidor -->
    <string name="login_error_authservice_usernotfound">Ese usuario no existe</string>
    <string name="login_error_authservice_incorrectpassword">La contraseña no es válida</string>
    <string name="login_error_invalid_server">La dirección del servidor es inválida</string>

    <!-- Activity: Incidencias: Views -->
    <string name="incidence_title">Incidencia</string>
    <string name="incidence_subtitle">Escriba su problema</string>
    <string name="incidence_lbl_datetime">Fecha y hora</string>
    <string name="incidence_hnt_datetime">¿Cuando ocurrio?</string>
    <string name="incidence_lbl_description">Descripción</string>
    <string name="incidence_hnt_description">¿Que pasó?</string>
    <string name="incidence_btn_send">Enviar</string>

    <!-- Activity: Incidencias: Errores -->
    <string name="incidence_error_token">Tu sesión actual no es válida.\nSalga de esta página y vuelva a entrar.</string>
    <string name="incidence_error_input_datetime">Debes elegir fecha y hora</string>
    <string name="incidence_error_input_description">Debes escribir tu problema</string>
    <string name="incidence_error_service_usernotfound">Ese usuario no existe</string>
    <string name="incidence_error_service_badrequest">Tu incidencia no se pudo procesar</string>
</resources>